--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Skranji&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <!-- swiper -->
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <script src="swiper-bundle.min.js"></script>
@@ -38,9 +41,9 @@
                             <form action="javascript:;" class="form">
                                 <div class="form__group">
 
-                                    <input class="form__input" type="text" name="weight" required v-model="weight">
+                                    <input class="form__input" type="text" name="weight" placeholder="Weight" required v-model="weight">
                                     <div class="form__input-after"></div>
-                                    <label class="form__label" for="weight">Weight</label>
+
                                 </div>
 
                                 <div class="form__group">
@@ -154,8 +157,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot" onclick="currentSlide(1)"></span>
@@ -209,8 +212,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide2(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide2(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide2(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide2(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot2" onclick="currentSlide2(1)"></span>
@@ -396,8 +399,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide4(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide4(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide4(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide4(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot4" onclick="currentSlide4(1)"></span>
@@ -523,8 +526,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide7(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide7(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide7(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide7(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot7" onclick="currentSlide7(1)"></span>
@@ -632,8 +635,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide21(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide21(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide21(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide21(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot21" onclick="currentSlide21(1)"></span>
@@ -721,8 +724,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide11(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide11(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide11(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide11(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot11" onclick="currentSlide11(1)"></span>
@@ -805,8 +808,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide71(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide71(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide71(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide71(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot71" onclick="currentSlide71(1)"></span>
@@ -993,8 +996,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="prev" onclick="plusSlide41(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlide41(1)">&#10095;</a>
+                                <!-- <a class="prev" onclick="plusSlide41(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlide41(1)">&#10095;</a> -->
                             </div>
                             <div style="text-align:center; margin-bottom: 6%;">
                                 <span class="dot41" onclick="currentSlide41(1)"></span>
@@ -1028,14 +1031,12 @@
             </div>
         </div>
 
-        <button v-if="p1" type="button" @click="changep1()">
-                <p>Sort By</p>
-                <p>Solar</p>
-            </button>
-        <button v-else type="button" @click="changep2()">
-                <p>Sort By</p>
-                <p>Gravity</p>
-            </button>
+        <button v-if="p1" type="button" @click="changep1()" class="bpp1">
+                <span>Sort By <br> Solar</span>
+        </button>
+        <button v-else type="button" @click="changep2()" class="bpp2">
+                <span>Sort By <br> Gravity</span>
+        </button>
     </div>
 
     </div>
