--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-    <!-- swiper -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">    <!-- swiper -->
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <script src="swiper-bundle.min.js"></script>
     <!-- jquery -->
