--- a/Arc/index.html
+++ b/Arc/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
                     style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
-                    <p class="topic_text home_topic_text">
+                    <p class="topic_text home_topic_text" style="color: #5382bf;">
                         {{info.Home[0].LawName}}
                     </p>
                     <p class="text">
@@ -101,7 +101,7 @@
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
-                    <p class="topic_text home_topic_text2">
+                    <p class="topic_text home_topic_text2" style="color: #5382bf;">
                         {{info.Home[1].LawName}}
                     </p>
                     <p class="text">
