--- a/Arc/index.html
+++ b/Arc/index.html
@@ -123,7 +123,7 @@
                     </video> <br>
                     <p data-aos-anchor-placement="top-bottom" data-aos="fade-right">กฎหมายการเลือกตั้ง</p>
                 </div>
-                <div class="col-4" v-if="status_law[0]"><img data-aos-anchor-placement="top-bottom" data-aos="fade-left"
+                <div class="col-4" v-if="status_law[0]"><img data-aos-anchor-placement="top-bottom" data-aos="fade-right"
                         @click="change_law('law0')" src="/Arc/Architecture/solve/flower/ดอกแดงอีกดอก/ดอก.png"
                         style="width: 200px; height: 200px;"><br>
                     <p data-aos-anchor-placement="top-bottom" data-aos="fade-left">กฎหมายการเลือกตั้ง</p>
