--- a/Arc/index.html
+++ b/Arc/index.html
@@ -126,7 +126,7 @@
                 <div class="col-4" v-if="status_law[0]"><img data-aos-anchor-placement="top-bottom" data-aos="fade-right"
                         @click="change_law('law0')" src="/Arc/Architecture/solve/flower/ดอกแดงอีกดอก/ดอก.png"
                         style="width: 200px; height: 200px;"><br>
-                    <p data-aos-anchor-placement="top-bottom" data-aos="fade-left">กฎหมายการเลือกตั้ง</p>
+                    <p data-aos-anchor-placement="top-bottom" data-aos="fade-right">กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div v-if="!status_law[1]" @click="change_law('law1')" class="col-6"
                     style="width: 100px; height: 100px; background-color: green;">กฎหมายลาคลอด</div>
