--- a/Arc/index.html
+++ b/Arc/index.html
@@ -116,30 +116,29 @@
         <div v-if="what_page == 'Law'" class="container">
             <div v-if="what_law == 'Main'" class="row">
                 <div class="col-4" v-if="!status_law[0]">
-                    <video data-aos-anchor-placement="top-bottom" data-aos="fade-right"
-                        @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')"
+                    <video @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')"
                         id="vid6" width="200" height="200" muted style="margin: 0;" @click="change_law('law0')">
-                        <source src="/Arc/Architecture/solve/flower/Another red flower/Another red flowerps.mp4" type="video/mp4">
+                        <source src="/Arc/Architecture/solve/flower/Another red flower/Another red flowerps.mp4"
+                            type="video/mp4">
                     </video> <br>
-                    <p data-aos-anchor-placement="top-bottom" data-aos="fade-right">กฎหมายการเลือกตั้ง</p>
+                    <p>กฎหมายการเลือกตั้ง</p>
                 </div>
-                <div class="col-4" v-if="status_law[0]"><img data-aos-anchor-placement="top-bottom" data-aos="fade-right"
-                        @click="change_law('law0')" src="/Arc/Architecture/solve/flower/Another red flower/Another red flower.png"
+                <div class="col-4" v-if="status_law[0]"><img @click="change_law('law0')"
+                        src="/Arc/Architecture/solve/flower/Another red flower/Another red flower.png"
                         style="width: 200px; height: 200px;"><br>
-                    <p data-aos-anchor-placement="top-bottom" data-aos="fade-right">กฎหมายการเลือกตั้ง</p>
+                    <p>กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col-4" v-if="!status_law[1]">
-                    <video data-aos-anchor-placement="top-bottom" data-aos="fade-right"
-                        @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')"
+                    <video @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')"
                         id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
                         <source src="/Arc/Architecture/solve/flower/Black flower/Black flowerps.mp4" type="video/mp4">
                     </video> <br>
-                    <p data-aos-anchor-placement="top-bottom" data-aos="fade-right">กฎหมายลาคลอด</p>
+                    <p>กฎหมายลาคลอด</p>
                 </div>
-                <div class="col-4" v-if="status_law[1]"><img data-aos-anchor-placement="top-bottom" data-aos="fade-right"
-                        @click="change_law('law1')" src="/Arc/Architecture/solve/flower/Black flower/Black flower.png"
+                <div class="col-4" v-if="status_law[1]"><img @click="change_law('law1')"
+                        src="/Arc/Architecture/solve/flower/Black flower/Black flower.png"
                         style="width: 200px; height: 200px;"><br>
-                    <p data-aos-anchor-placement="top-bottom" data-aos="fade-right">กฎหมายลาคลอด</p>
+                    <p>กฎหมายลาคลอด</p>
                 </div>
             </div>
             <div v-if="what_law == 'law0'" class="row">
@@ -180,48 +179,50 @@
             <div v-if="what_draft_law == 'Main'" class="row">
 
                 <div class="col-4" v-if="!status_draft_law[0]">
-                    <video data-aos-anchor-placement="top-center" data-aos="fade-right"
+                    <video
                         @mouseover="Blooming_flowers(true, 'vid0')" @mouseleave="Blooming_flowers(false, 'vid0')"
                         id="vid0" width="200" height="200" muted style="margin: 0;"
                         @click="change_draw_law('draw_law0')">
                         <source src="/Arc/Architecture/solve/flower/White flowers/White flowersps.mp4" type="video/mp4">
                     </video> <br>
 
-                    <p data-aos-anchor-placement="top-center" data-aos="fade-right">ร่าง{{info.Draftlaw[0].DLName1}}
+                    <p>ร่าง{{info.Draftlaw[0].DLName1}}
                     </p>
                 </div>
                 <div class="col-4" v-if="status_draft_law[0]"><img data-aos-anchor-placement="top-center"
                         data-aos="fade-right" @click="change_draw_law('draw_law0')"
-                        src="/Arc/Architecture/solve/flower/White flowers/White flowers.png" style="width: 200px; height: 200px;"><br>
-                    <p data-aos-anchor-placement="top-center" data-aos="fade-right">ร่าง{{info.Draftlaw[0].DLName1}}</p>
+                        src="/Arc/Architecture/solve/flower/White flowers/White flowers.png"
+                        style="width: 200px; height: 200px;"><br>
+                    <p>ร่าง{{info.Draftlaw[0].DLName1}}</p>
 
                 </div>
 
                 <div class="col-4" v-if="!status_draft_law[1]">
-                    <video data-aos-anchor-placement="top-center" data-aos="fade-down"
+                    <video
                         @mouseover="Blooming_flowers(true, 'vid1')" @mouseleave="Blooming_flowers(false, 'vid1')"
                         id="vid1" width="200" height="200" muted style="margin: 0;"
                         @click="change_draw_law('draw_law1')">
-                        <source src="/Arc/Architecture/solve/flower/Purple flowers/Purple flowers-3.mp4" type="video/mp4">
+                        <source src="/Arc/Architecture/solve/flower/Purple flowers/Purple flowers-3.mp4"
+                            type="video/mp4">
                     </video> <br>
-                    <p data-aos-anchor-placement="top-center" data-aos="fade-down">ร่าง{{info.Draftlaw[1].DLName1}}</p>
+                    <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
                 <div class="col-4" v-if="status_draft_law[1]"><img data-aos-anchor-placement="top-center"
                         data-aos="fade-down" @click="change_draw_law('draw_law1')"
                         src="/Arc/Architecture/solve/flower/Purple flowers/Purple flowers.png"
                         style="width: 200px; height: 200px;"><br>
-                    <p data-aos-anchor-placement="top-center" data-aos="fade-down">ร่าง{{info.Draftlaw[1].DLName1}}</p>
+                    <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
 
                 <div class="col-4" v-if="!status_draft_law[2]">
-                    <video data-aos-anchor-placement="top-center" data-aos="fade-left"
+                    <video
                         @mouseover="Blooming_flowers(true, 'vid2')" @mouseleave="Blooming_flowers(false, 'vid2')"
                         id="vid2" width="200" height="200" muted style="margin: 0;"
                         @click="change_draw_law('draw_law2')">
                         <source src="/Arc/Architecture/solve/flower/Pink flowers/Pink flowersps.mp4" type="video/mp4">
                     </video> <br>
 
-                    <p class="Draft" data-aos-anchor-placement="top-center" data-aos="fade-left">
+                    <p class="Draft">
                         ร่าง{{info.Draftlaw[2].DLName1}}
                     </p>
 
@@ -231,45 +232,45 @@
                         src="/Arc/Architecture/solve/flower/Pink flowers/Pink flowers.png"
                         style="width: 200px; height: 200px;"><br>
 
-                    <p data-aos-anchor-placement="top-center" data-aos="fade-left">ร่าง{{info.Draftlaw[2].DLName1}}
+                    <p>ร่าง{{info.Draftlaw[2].DLName1}}
                     </p>
 
                 </div>
 
                 <div class="col-4" v-if="!status_draft_law[3]">
-                    <video data-aos="fade-up-right" @mouseover="Blooming_flowers(true, 'vid3')"
+                    <video @mouseover="Blooming_flowers(true, 'vid3')"
                         @mouseleave="Blooming_flowers(false, 'vid3')" id="vid3" width="200" height="200" muted
                         style="margin: 0;" @click="change_draw_law('draw_law3')">
                         <source src="/Arc/Architecture/solve/flower/Blue flowers/Blue flowersps.mp4" type="video/mp4">
                     </video> <br>
-                    <p data-aos="fade-up-right">ร่าง{{info.Draftlaw[3].DLName1}}</p>
+                    <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
-                <div class="col-4" v-if="status_draft_law[3]"><img data-aos="fade-up-right"
+                <div class="col-4" v-if="status_draft_law[3]"><img
                         @click="change_draw_law('draw_law3')"
                         src="/Arc/Architecture/solve/flower/Blue flowers/Blue flowers.png"
                         style="width: 200px; height: 200px;"><br>
-                    <p data-aos="fade-up-right">ร่าง{{info.Draftlaw[3].DLName1}}</p>
+                    <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
 
                 <div class="col-4" v-if="!status_draft_law[4]">
-                    <video data-aos="fade-up-left" @mouseover="Blooming_flowers(true, 'vid4')"
+                    <video @mouseover="Blooming_flowers(true, 'vid4')"
                         @mouseleave="Blooming_flowers(false, 'vid4')" id="vid4" width="200" height="200" muted
                         style="margin: 0;" @click="change_draw_law('draw_law4')">
                         <source src="/Arc/Architecture/solve/flower/Red flowers/Red flowersps.mp4" type="video/mp4">
                     </video> <br>
-                    <p data-aos="fade-up-left">ร่าง{{info.Draftlaw[4].DLName1}}</p>
+                    <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
-                <div class="col-4" v-if="status_draft_law[4]"><img data-aos="fade-up-left"
-                        @click="change_draw_law('draw_law4')" src="/Arc/Architecture/solve/flower/Red flowers/Red flowers2.png"
+                <div class="col-4" v-if="status_draft_law[4]"><img
+                        @click="change_draw_law('draw_law4')"
+                        src="/Arc/Architecture/solve/flower/Red flowers/Red flowers2.png"
                         style="width: 200px; height: 200px;"><br>
-                    <p data-aos="fade-up-left">ร่าง{{info.Draftlaw[4].DLName1}}</p>
+                    <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law0'" class="row">
                 <div class="col-7">
                     <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                        <source src="Architecture/solve/draft law/Free abortion law.mp4"
-                            type="video/mp4">
+                        <source src="Architecture/solve/draft law/Free abortion law.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-5">
@@ -299,8 +300,7 @@
             <div v-if="what_draft_law == 'draw_law2'" class="row">
                 <div style="margin-top:10;" class="col-5">
                     <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                        <source src="Architecture/solve/draft law/Safe city laws for women.mp4"
-                            type="video/mp4">
+                        <source src="Architecture/solve/draft law/Safe city laws for women.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-7">
