เปลี่ยนรูปที่ชัดกว่า

--- a/Arc/index.html
+++ b/Arc/index.html
@@ -131,12 +131,12 @@
                 <div class="col-4" v-if="!status_law[1]">
                     <video @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')"
                         id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
-                        <source src="/Arc/Architecture/solve/flower/Black flower/Black flowerps.mp4" type="video/mp4">
+                        <source src="/Arc/Architecture/solve/flower/Black flower2/Black flowerps2.mp4" type="video/mp4">
                     </video> <br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
                 <div class="col-4" v-if="status_law[1]"><img @click="change_law('law1')"
-                        src="/Arc/Architecture/solve/flower/Black flower/Black flower.png"
+                        src="/Arc/Architecture/solve/flower/Black flower2/Black flower2.png"
                         style="width: 200px; height: 200px;"><br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
